Fix missing no wrap itens

--- a/comercio-eletronico-next-app/src/pages/index.module.scss
+++ b/comercio-eletronico-next-app/src/pages/index.module.scss
@@ -5,6 +5,7 @@
 
   &_container {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
   }
